fix top menu on small devices

--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
   display: table-cell;
   padding: 0;
   margin: 0;
-  font-size: larger;
+  font-size: 2vw;
   width: 1%;
 }
 
